Added frontend user record feature

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -27,3 +27,16 @@
 
   background-color: black; !important
 }
+
+#record {
+  display: inline-block;
+}
+
+#button {
+  display: inline-block;
+}
+
+ul {
+  padding: 0;
+  list-style-type: none;
+}
