--- a/views/colab/index.handlebars
+++ b/views/colab/index.handlebars
@@ -21,6 +21,8 @@
       <br>
       <br>
       <div id = "button"></div>
+      <div id = "record"></div>
+      <ul id="recordingslist"></ul>
     </div>
     <div class="col-lg-4 panel panel-primary drum-panel" style="min-height: 200px;">
       <h5>Visualizer</h5>
