--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -2,16 +2,17 @@
   <div class="row">
     <div class="col-lg-4 panel panel-primary" style="min-height: 200px;">
       <h5>Global controls</h5>
-      <br>
       <span id = "output"></span>
       <!-- <button id = "start_stop_btn" type = "button" class = "btn btn-success">Start/Stop</button> -->
-      <br>
+      
       <div id = "slider">
         <div id = "tempodisplay"></div>
       </div>
       <br>
       <br>
       <div id = "button"></div>
+      <div id = "record"></div>
+      <ul id="recordingslist"></ul>
     </div>
     <div class="col-lg-4 panel panel-primary drum-panel" style="min-height: 200px;">
       <h5>Visualizer</h5>
