--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,7 +46,7 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav>x
   <br><br><br>
   {{{ body }}}
 
@@ -55,12 +55,14 @@
   <script src="/vendor/ToneJS/Tone.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/vendor/StartAudioContext.js"></script>
+  <script src="/vendor/recorder/recorder.js"></script>
 
   <script type="text/javascript" src="/globalControls.js"></script>
 
   <script type="text/javascript" src="/drumMachine.js"></script>
   <script type="text/javascript" src="/synth.js"></script>
   <script type="text/javascript" src="/socketControls.js"></script>
+  <script type="text/javascript" src="/record.js"></script>
 
   {{#if cur_user}}
     <script type="text/javascript" src="/saveControls.js"></script>
