Added the names for drums and synth

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -36,6 +36,32 @@
   display: inline-block;
 }
 
+#synth {
+  display: inline-block;
+}
+
+#synthIds {
+  height: 350px;
+  display: inline-block;
+}
+
+#synthId {
+  height: 13.4%;
+}
+
+#drums {
+  display: inline-block;
+}
+
+#drumIds {
+  height: 176px;
+  display: inline-block;
+}
+
+#drumId {
+  height: 30%;
+}
+
 ul {
   padding: 0;
   list-style-type: none;
