--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -56,6 +56,16 @@
         <div id="S15" class="step"></div>
       </div>
       <div id = "synth"></div>
+      <div id = "synthIds">
+        <div id = "synthId">C4</div>
+        <div id = "synthId">B3</div>
+        <div id = "synthId">A3</div>
+        <div id = "synthId">G3</div>
+        <div id = "synthId">F3</div>
+        <div id = "synthId">E3</div>
+        <div id = "synthId">D3</div>
+        <div id = "synthId">C3</div>
+      </div>
       <strong style="color: white;margin-left:14px; word-spacing:24.5px; ">01</strong>
       <span style="margin-left:24.5px; word-spacing:24.5px;">02 03 04</span>
       <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">05</strong>
@@ -122,6 +132,12 @@
         <div id="D15" class="step"></div>
       </div>
       <div id = "drums"></div>
+      <div id = "drumIds">
+        <div id = "drumId">Hihat</div>
+        <div id = "drumId">Hat</div>
+        <div id = "drumId">Snare</div>
+        <div id = "drumId">Kick</div>
+      </div>
       <strong style="color: white;margin-left:14px; word-spacing:24.5px; ">01</strong>
       <span style="margin-left:24.5px; word-spacing:24.5px;">02 03 04</span>
       <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">05</strong>
