--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
 
           {{/if}}
 
-          <div class="navbar-text">Hello. {{cur_user.firstName}} </div>
+          <div class="navbar-text">Hello {{cur_user.firstName}} </div>
           <p id = "username" style="display:none;">{{cur_user.firstName}}</p>
 
         {{/if}}
@@ -58,7 +58,7 @@
   <script src="/vendor/recorder/recorder.js"></script>
 
   <script type="text/javascript" src="/globalControls.js"></script>
-  
+
   <script type="text/javascript" src="/drumMachine.js"></script>
   <script type="text/javascript" src="/synth.js"></script>
 
