--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -91,15 +91,16 @@
         <div id = "synthId">D3</div>
         <div id = "synthId">C3</div>
       </div>
-      <strong style="color: white;margin-left:14px; word-spacing:24.5px; ">01</strong>
-      <span style="margin-left:24.5px; word-spacing:24.5px;">02 03 04</span>
-      <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">05</strong>
-      <span style="margin-left:24.5px; word-spacing:24.5px;">06 07 08</span>
-      <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">09</strong>
-      <span style="margin-left:24.5px; word-spacing:24.5px;">10 11 12</span>
-      <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">13</strong>
-      <span style="margin-left:24.5px; word-spacing:24.5px;">14 15 16</span>
-      <br>
+      <div>
+        <strong style="color: white;margin-left:14px; word-spacing:24.5px; ">01</strong>
+        <span style="margin-left:24.5px; word-spacing:24.5px;">02 03 04</span>
+        <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">05</strong>
+        <span style="margin-left:24.5px; word-spacing:24.5px;">06 07 08</span>
+        <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">09</strong>
+        <span style="margin-left:24.5px; word-spacing:24.5px;">10 11 12</span>
+        <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">13</strong>
+        <span style="margin-left:24.5px; word-spacing:24.5px;">14 15 16</span>
+      </div>
     </div>
   </div>
 
@@ -159,20 +160,21 @@
       </div>
       <div id = "drums"></div>
       <div id = "drumIds">
-        <div id = "drumId">Hihat</div>
-        <div id = "drumId">Hat</div>
-        <div id = "drumId">Snare</div>
-        <div id = "drumId">Kick</div>
+        <div id = "drumId">OH</div>
+        <div id = "drumId">CH</div>
+        <div id = "drumId">SD</div>
+        <div id = "drumId">BD</div>
       </div>
-      <strong style="color: white;margin-left:14px; word-spacing:24.5px; ">01</strong>
-      <span style="margin-left:24.5px; word-spacing:24.5px;">02 03 04</span>
-      <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">05</strong>
-      <span style="margin-left:24.5px; word-spacing:24.5px;">06 07 08</span>
-      <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">09</strong>
-      <span style="margin-left:24.5px; word-spacing:24.5px;">10 11 12</span>
-      <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">13</strong>
-      <span style="margin-left:24.5px; word-spacing:24.5px;">14 15 16</span>
-      <br>
+      <div>
+        <strong style="color: white;margin-left:14px; word-spacing:24.5px; ">01</strong>
+        <span style="margin-left:24.5px; word-spacing:24.5px;">02 03 04</span>
+        <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">05</strong>
+        <span style="margin-left:24.5px; word-spacing:24.5px;">06 07 08</span>
+        <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">09</strong>
+        <span style="margin-left:24.5px; word-spacing:24.5px;">10 11 12</span>
+        <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">13</strong>
+        <span style="margin-left:24.5px; word-spacing:24.5px;">14 15 16</span>
+      </div>
     </div>
 
   </div>
