--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 10px;
   margin-top: 3px;
-
   position: relative;
 }
 
@@ -24,10 +23,8 @@
 }
 
 .drum-panel {
-
   background-color: black; !important
 }
-
 
 input[type="text"] {
   background-color: #222;
@@ -88,6 +85,16 @@ ul {
   padding: 0;
   list-style-type: none;
 }
+
+.step-numbers span, .step-numbers strong{
+  margin-left:24.5px;
+  word-spacing:24.5px;
+}
+.step-numbers strong{
+  color: white;
+}
+
+
 
 #synth_save_btn, #drums_save_btn{ display: none; }
 /* hide save buttons for now */
