--- a/views/colab/index.handlebars
+++ b/views/colab/index.handlebars
@@ -105,15 +105,15 @@
         <div id = "synthId">D3</div>
         <div id = "synthId">C3</div>
       </div>
-      <div>
-        <strong style="color: white;margin-left:14px; word-spacing:24.5px; ">01</strong>
-        <span style="margin-left:24.5px; word-spacing:24.5px;">02 03 04</span>
-        <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">05</strong>
-        <span style="margin-left:24.5px; word-spacing:24.5px;">06 07 08</span>
-        <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">09</strong>
-        <span style="margin-left:24.5px; word-spacing:24.5px;">10 11 12</span>
-        <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">13</strong>
-        <span style="margin-left:24.5px; word-spacing:24.5px;">14 15 16</span>
+      <div class="step-numbers">
+        <strong style="margin-left:14px;">01</strong>
+        <span>02 03 04</span>
+        <strong>05</strong>
+        <span >06 07 08</span>
+        <strong>09</strong>
+        <span >10 11 12</span>
+        <strong>13</strong>
+        <span >14 15 16</span>
       </div>
     </div>
   </div>
@@ -171,15 +171,15 @@
         <div id = "drumId">SD</div>
         <div id = "drumId">BD</div>
       </div>
-      <div>
-        <strong style="color: white;margin-left:14px; word-spacing:24.5px; ">01</strong>
-        <span style="margin-left:24.5px; word-spacing:24.5px;">02 03 04</span>
-        <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">05</strong>
-        <span style="margin-left:24.5px; word-spacing:24.5px;">06 07 08</span>
-        <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">09</strong>
-        <span style="margin-left:24.5px; word-spacing:24.5px;">10 11 12</span>
-        <strong style="color: white; margin-left:24.5px; word-spacing:24.5px; ">13</strong>
-        <span style="margin-left:24.5px; word-spacing:24.5px;">14 15 16</span>
+      <div class="step-numbers">
+        <strong style="margin-left:14px;">01</strong>
+        <span>02 03 04</span>
+        <strong>05</strong>
+        <span >06 07 08</span>
+        <strong>09</strong>
+        <span >10 11 12</span>
+        <strong>13</strong>
+        <span >14 15 16</span>
       </div>
     </div>
 
