--- a/views/colab/index.handlebars
+++ b/views/colab/index.handlebars
@@ -15,7 +15,7 @@
       <span id = "output"></span>
       <!-- <button id = "start_stop_btn" type = "button" class = "btn btn-success">Start/Stop</button> -->
       <br>
-      <div id = "slider">
+      <div id = "tempo-slider">
         <div id = "tempodisplay"></div>
       </div>
       <br>
