--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -5,7 +5,7 @@
       <span id = "output"></span>
       <!-- <button id = "start_stop_btn" type = "button" class = "btn btn-success">Start/Stop</button> -->
 
-      <div id = "slider">
+      <div id = "tempo-slider">
         <div id = "tempodisplay"></div>
       </div>
       <br>
