add dropdown to select synth delay time

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -27,6 +27,8 @@
       <div id="synth-vol"></div>
       <div> echo mix </div>
       <div id="echo"></div>
+      <span id="synth-delay-time"></span>
+
       <br>
 
 
