implement drum delay time.  remove half note option, because it exceeded max supported delay time

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -114,6 +114,7 @@
       <div id="drum-vol"></div>
       <div> echo mix </div>
       <div id="echo-drums"></div>
+      <span id="drum-delay-time"></span>
       <div> filter </div>
       <div id="drums-filter"></div>
 
