Added scale changes for synth

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -28,7 +28,7 @@
       <div> echo mix </div>
       <div id="echo"></div>
       <span id="synth-delay-time"></span>
-
+      <span id="scale-select"></span>
       <br>
 
 
