--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -22,6 +22,27 @@
   width:100%;
 }
 
+.row {
+  /*-webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;*/
+  border: none;
+}
+
+.active-row {
+  -webkit-box-shadow: 0px 0px 1px 1px rgba(255,255,255,0.75);
+  -moz-box-shadow: 0px 0px 1px 1px rgba(255,255,255,0.75);
+  box-shadow: 0px 0px 1px 1px rgba(255,255,255,0.75);
+  border: 3px solid #299DD3;
+
+}
+
+.global > div > div
+{
+  min-width: 50%;
+  margin-bottom: 0px;
+}
+
 .drum-panel {
   background-color: black; !important
 }
@@ -96,3 +117,16 @@ ul {
     width:760px;
   }
 }
+
+/* potential responsive design rules */
+/*@media (max-width: 1024px){
+  .container {
+    width:760px;
+  }
+  .row div div {
+    margin-bottom: 0px;
+  }
+  .row {
+    margin-bottom: 20px;
+  }
+}*/
