--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -29,17 +29,20 @@
   border: none;
 }
 
+.row > div {
+  border: 3px solid transparent;
+}
+
 .active-row {
   -webkit-box-shadow: 0px 0px 1px 1px rgba(255,255,255,0.75);
   -moz-box-shadow: 0px 0px 1px 1px rgba(255,255,255,0.75);
   box-shadow: 0px 0px 1px 1px rgba(255,255,255,0.75);
   border: 3px solid #299DD3;
-
 }
 
 .global > div > div
 {
-  min-width: 50%;
+  /*min-width: 50%;*/
   margin-bottom: 0px;
 }
 
