comment out 2 lines in Tone.js.  Link Tone.js instead of Tone.min.js

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,7 +51,7 @@
 
   <script src="/vendor/nexus/NexusUI.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="/vendor/ToneJS/Tone.min.js"></script>
+  <script src="/vendor/ToneJS/Tone.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/vendor/StartAudioContext.js"></script>
   <script src="/vendor/recorder/recorder.js"></script>
